--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -7,18 +7,23 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center"
         android:visibility="visible">
 
-        <Button
-            android:id="@+id/download_data_button"
+        <TextView
+            android:id="@+id/service_recharge_header_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Download Data"/>
+            android:layout_margin="10dp"
+            android:text="Eartqueakes:" />
 
-
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/main_recycler_earthquakes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:clipToPadding="false" />
     </LinearLayout>
 
 
