--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -18,6 +18,12 @@
             android:layout_height="wrap_content"
             android:text="Download Data"/>
 
+        <Button
+            android:id="@+id/load_data_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Load Data"/>
+
 
     </LinearLayout>
 
