--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,6 +12,18 @@
         android:gravity="center"
         android:visibility="visible">
 
+        <TextView
+            android:id="@+id/selected_date_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""/>
+
+        <Button
+            android:id="@+id/select_date_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select date"/>
+
         <Button
             android:id="@+id/download_data_button"
             android:layout_width="wrap_content"
